--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -3,3 +3,30 @@
     justify-content: space-between;
     background-color: red;
 }
+
+.products2{
+    display: flex;
+    justify-content: space-between;
+    margin:30px 0;
+
+    .card2{
+        display: flex;
+        flex-direction: column;
+        width:300px;
+        box-shadow: 0 0 7px black;
+        border-radius: 10px;
+        overflow: hidden;
+
+        &__img{
+            width:100%;
+        }
+
+        &__title{
+            margin:10px 0!important;
+    
+        }
+        &__title, &__description{
+            padding:0 10px;
+        }
+    }
+}
